--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
-AddType text/css css .css
-
-RewriteEngine off
+RewriteEngine On
 
 RewriteBase /
 
-RewriteRule ^/?(.+) index.php?page=$1 [L]
+RewriteCond %{REQUEST_URI}	^/[^/\.]*$
+RewriteRule ^.*$	index.php	[L]
