--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,6 @@ RewriteBase /
 RewriteCond %{REQUEST_URI}	^/[^/\.]*$
 RewriteRule ^.*$	index.php	[L]
 
-RewriteCond %{REQUEST_URI}	^/[a-z_]+/[^\.]+$
-RewriteCond %{REQUEST_URI}	^/[a-z_]+/[^\.]+/
-RewriteRule ^([a-z_]+)/	$1.php	[L]
+RewriteCond %{REQUEST_URI}	^/[a-z_]+/[^/\.]+$	[OR]
+RewriteCond %{REQUEST_URI}	^/[a-z_]+/[^/\.]+/
+RewriteRule ^([a-z_]+)/.+	$1.php	[L]
